fix: Fix wrong scrollbar and add collapse-tags (#6)

--- a/src/components/region-picker.styl
+++ b/src/components/region-picker.styl
@@ -214,6 +214,7 @@ $disabled-color-base = $border-color-light
           border-top-color #fff
   &__search
     input
+      border-radius 4px
       box-sizing border-box
       width 100%
       height $height-input
@@ -238,7 +239,7 @@ $disabled-color-base = $border-color-light
     text-align left
     white-space nowrap
     text-overflow ellipsis
-    overflow-x scroll
+    overflow hidden
 
   &__wrap
     overflow hidden
